gccida/g0/store_split_bit_field
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1347:20: error: expected identifier or '('
 struct rtx_def **(short *)0x0; // [rsp+50h] [rbp-10h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1347:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1347:19: note: to match this '('
 struct rtx_def **(short *)0x0; // [rsp+50h] [rbp-10h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1348:20: error: expected identifier or '('
 struct rtx_def **(short *)0x0a; // [rsp+50h] [rbp-10h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1348:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1348:19: note: to match this '('
 struct rtx_def **(short *)0x0a; // [rsp+50h] [rbp-10h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1368:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( op0[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1386:39: error: invalid suffix 'xmode' on integer constant
word = gen_lowpart_common( *(short *)0xmode, value); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1392:17: error: invalid suffix 'xmode' on integer constant
v7 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1394:41: error: invalid suffix 'xmode' on integer constant
valuea = gen_lowpart_common( *(short *)0xmode, v8); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1423:44: error: invalid suffix 'xmode' on integer constant
part = extract_fixed_bit_field( *(short *)0xmode, valuea, 0LL, v10, bitsdone, 0LL, 1); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1430:41: error: invalid suffix 'orce' on integer constant
*(short *)0x0 = operand_sub*(short *)0xforce( 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1433:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( op0->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1430:17: error: use of undeclared identifier 'operand_sub'
*(short *)0x0 = operand_sub*(short *)0xforce( 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1438:42: error: invalid suffix 'orce' on integer constant
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1438:63: error: use of undeclared identifier 'machine_mode'
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/expmed.c:1438:18: error: use of undeclared identifier 'operand_sub'
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                 ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_split_bit_field/src/obj/expmed.o] Error 1
